src/test/deca/syntax/valid/created/parser/FloatOverflow.deca
{
    float a = 1.4E41;
}